chore: new kubernetes test coverage and documentation