@@ -1,8 +1,13 @@
 package es.bluesolution.dlq_streaming.kubernetes;
 
+import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.zaxxer.hikari.HikariConfig;
+import com.zaxxer.hikari.HikariDataSource;
 import io.fabric8.kubernetes.api.model.Pod;
 import io.fabric8.kubernetes.api.model.apps.Deployment;
 import io.fabric8.kubernetes.client.Config;
+import io.fabric8.kubernetes.client.LocalPortForward;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClientBuilder;
 import lombok.extern.slf4j.Slf4j;
@@ -14,12 +19,16 @@ import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
-import org.springframework.http.MediaType;import org.springframework.web.client.RestClient;
+import org.springframework.http.MediaType;
+import org.springframework.jdbc.core.simple.JdbcClient;
+import org.springframework.web.client.RestClient;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import org.testcontainers.k3s.K3sContainer;
 import org.testcontainers.utility.DockerImageName;
 import org.testcontainers.utility.MountableFile;
+
+import io.fabric8.kubernetes.api.model.batch.v1.JobBuilder;
 
 import java.io.File;
 import java.io.InputStream;
@@ -27,10 +36,26 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.awaitility.Awaitility.await;
+
+/**
+ * JSON shape returned by {@code POST /drain/trigger}.
+ * Mirrors {@code TriggerDrainResponse} — kept local to avoid a test compile
+ * dependency on the production class.
+ */
+record DrainApiResponse(
+        int releasedExpiredLeases,
+        int claimedCount,
+        int storedCount,
+        int deletedCount,
+        boolean stoppedBecauseReceiverFailed,
+        String lastProcessedProcessId,
+        String stopReason
+) {}
 
 /**
  * Kubernetes deployment tests for dlq-streaming.
@@ -102,6 +127,12 @@ class KubernetesDeploymentTest {
     static final String POSTGRES_IMAGE = "postgres:17-alpine";
 
     /**
+     * Curl image used by the CronJob to POST to /drain/trigger.
+     * Pre-loaded into k3s so the CronJob Job pods start with imagePullPolicy: Never.
+     */
+    static final String CURL_IMAGE = "curlimages/curl:8.14.1";
+
+    /**
      * K3s version to use. Tracks the same Kubernetes minor release as the
      * production cluster (see {@code k8s/base/deployment.yaml}).
      * Aligned with {@code kindest/node:v1.33.0} used in idp-concept.
@@ -132,6 +163,22 @@ class KubernetesDeploymentTest {
     static RestClient apiClient;
     static RestClient mgmtClient;
 
+    // ── Direct PostgreSQL access for operational tests ─────────────────────
+    /**
+     * Fabric8 port-forward that tunnels the postgres pod's port 5432 to a
+     * dynamically assigned local port. Opened once in {@link #setUpCluster()}
+     * and closed in {@link #tearDownCluster()}.
+     */
+    static LocalPortForward pgPortForward;
+    /** HikariCP datasource pointing at the tunnelled PostgreSQL port. */
+    static HikariDataSource pgDataSource;
+    /** Spring JdbcClient for seeding and verifying the dead-letter table. */
+    static JdbcClient pgJdbcClient;
+
+    /** Jackson ObjectMapper for parsing JSON responses from the drain API. */
+    static final ObjectMapper MAPPER = new ObjectMapper()
+            .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+
     // ── Setup ──────────────────────────────────────────────────────────────
 
     @BeforeAll
@@ -146,6 +193,7 @@ class KubernetesDeploymentTest {
         // 2. Load images into k3s containerd to avoid in-container registry pulls.
         //    Pre-loading both images makes startup deterministic and avoids hub rate-limits.
         loadImageIntoK3s(POSTGRES_IMAGE);
+        loadImageIntoK3s(CURL_IMAGE);       // required by the CronJob test (Order 17)
         loadAppImageIntoK3s();
 
         // 3. Apply test manifests: PostgreSQL first, then app.
@@ -156,6 +204,10 @@ class KubernetesDeploymentTest {
         applyManifest("kubernetes/app-deployment.yaml");
         waitForDeploymentReady("default", "dlq-streaming", Duration.ofSeconds(180));
 
+        // 4b. Apply the CronJob used by Order 17.
+        //     curlimages/curl is already loaded in step 2.
+        applyManifest("kubernetes/cronjob-test.yaml");
+
         // 4. Configure REST clients once the app is running.
         String host       = K3S.getHost();
         int    apiPort    = K3S.getMappedPort(30080);
@@ -164,12 +216,21 @@ class KubernetesDeploymentTest {
         apiClient  = RestClient.builder().baseUrl("http://" + host + ":" + apiPort).build();
         mgmtClient = RestClient.builder().baseUrl("http://" + host + ":" + mgmtPort).build();
 
+        // 5. Open a direct JDBC tunnel to PostgreSQL inside k3s.
+        //    Fabric8 LocalPortForward tunnels postgres:5432 -> 127.0.0.1:<dynamic>.
+        //    This lets operational tests seed and verify data without needing a
+        //    NodePort for PostgreSQL in the test manifests.
+        openPostgresPortForward();
+
         log.info("=== Cluster ready — API: {}:{}, management: {}:{} ===", host, apiPort, host, mgmtPort);
     }
 
     @AfterAll
     static void tearDownCluster() {
         log.info("=== Kubernetes deployment test teardown ===");
+
+        // Close the PostgreSQL JDBC tunnel opened for operational tests.
+        closePostgresPortForward();
 
         // Close the Fabric8 client (frees HTTP connections to the k3s API server).
         if (k8sClient != null) {
@@ -220,7 +281,7 @@ class KubernetesDeploymentTest {
                 .as("At least one dlq-streaming pod must exist")
                 .isNotEmpty();
 
-        var pod = pods.get(0);
+        var pod = pods.getFirst();
         boolean isReady = pod.getStatus().getConditions().stream()
                 .anyMatch(c -> "Ready".equals(c.getType()) && "True".equals(c.getStatus()));
 
@@ -319,7 +380,7 @@ class KubernetesDeploymentTest {
                 .getItems();
 
         assertThat(pods).isNotEmpty();
-        var pod = pods.get(0);
+        var pod = pods.getFirst();
 
         // Check pod-level spec
         var podSpec = pod.getSpec();
@@ -410,12 +471,351 @@ class KubernetesDeploymentTest {
                 .getItems();
 
         assertThat(pods).isNotEmpty();
-        assertThat(pods.get(0).getSpec().getContainers())
+        assertThat(pods.getFirst().getSpec().getContainers())
                 .as("Pod must have exactly one container")
                 .hasSize(1);
     }
 
+    // ── Operational tests (Orders 10–16) ────────────────────────────────
+    // These tests exercise the application's business behaviour while it runs
+    // in the real k3s cluster with a real PostgreSQL database.  They use the
+    // Fabric8 LocalPortForward tunnel (postgres pod port 5432 → localhost)
+    // to seed and verify data via JDBC, and the REST clients to call the API.
+
+    @Test
+    @Order(10)
+    @DisplayName("Drain on empty table returns zero counts and HTTP 200")
+    void drainOnEmptyTableReturnsZeroCounts() throws Exception {
+        cleanDeadLetterTable();
+
+        var response = callDrainApi();
+
+        assertThat(response.claimedCount()).as("claimedCount").isZero();
+        assertThat(response.storedCount()).as("storedCount").isZero();
+        assertThat(response.deletedCount()).as("deletedCount").isZero();
+        assertThat(response.stoppedBecauseReceiverFailed()).as("stoppedBecauseReceiverFailed").isFalse();
+    }
+
+    @Test
+    @Order(11)
+    @DisplayName("Drain consumes all 3 pending records and clears the table")
+    void drainConsumesAllPendingRecordsAndClearsTable() throws Exception {
+        cleanDeadLetterTable();
+        seedPendingRecord("product-1_2026-05-23T10:15:30Z");
+        seedPendingRecord("product-2_2026-05-23T10:16:30Z");
+        seedPendingRecord("product-3_2026-05-23T10:17:30Z");
+
+        assertThat(countAllRecords()).as("3 records seeded").isEqualTo(3);
+
+        var response = callDrainApi();
+
+        assertThat(response.claimedCount()).as("All 3 claimed").isEqualTo(3);
+        assertThat(response.storedCount()).as("All 3 stored by receiver").isEqualTo(3);
+        assertThat(response.deletedCount()).as("All 3 deleted from DB after dispatch").isEqualTo(3);
+        assertThat(response.stoppedBecauseReceiverFailed()).as("Receiver did not fail").isFalse();
+        assertThat(countAllRecords()).as("Table empty after drain").isZero();
+    }
+
+    @Test
+    @Order(12)
+    @DisplayName("Drain respects configured batch size: 15 records need 2 runs with batch=10")
+    void drainRespectsBatchSizeAndRequiresMultipleRunsFor15Records() throws Exception {
+        cleanDeadLetterTable();
+        for (int i = 1; i <= 15; i++) {
+            seedPendingRecord("product-" + i + "_2026-05-24T10:00:00Z");
+        }
+        assertThat(countAllRecords()).as("15 records seeded").isEqualTo(15);
+
+        // First run: batch size is 10 (from ConfigMap DLQ_BATCH_SIZE=10)
+        var first = callDrainApi();
+        assertThat(first.claimedCount()).as("First run claims 10").isEqualTo(10);
+        assertThat(first.deletedCount()).as("First run deletes 10").isEqualTo(10);
+        assertThat(countAllRecords()).as("5 records remain after first run").isEqualTo(5);
+
+        // Second run: remaining 5
+        var second = callDrainApi();
+        assertThat(second.claimedCount()).as("Second run claims remaining 5").isEqualTo(5);
+        assertThat(second.deletedCount()).as("Second run deletes remaining 5").isEqualTo(5);
+        assertThat(countAllRecords()).as("Table empty after second run").isZero();
+    }
+
+    @Test
+    @Order(13)
+    @DisplayName("Drain is idempotent: three consecutive calls on empty table all return 200 with zero counts")
+    void drainIsIdempotentOnEmptyTable() throws Exception {
+        cleanDeadLetterTable();
+
+        for (int i = 1; i <= 3; i++) {
+            var response = callDrainApi();
+            assertThat(response.claimedCount())
+                    .as("Run %d: claimedCount must be 0", i)
+                    .isZero();
+            assertThat(response.stoppedBecauseReceiverFailed())
+                    .as("Run %d: must not stop due to receiver failure", i)
+                    .isFalse();
+        }
+    }
+
+    @Test
+    @Order(14)
+    @DisplayName("Concurrent drain calls do not double-process the same records (SKIP LOCKED semantics)")
+    void concurrentDrainCallsDoNotDoubleProcessRecords() throws Exception {
+        cleanDeadLetterTable();
+        // Seed exactly 10 records — enough for two concurrent workers to compete over.
+        for (int i = 1; i <= 10; i++) {
+            seedPendingRecord("concurrent-" + i + "_2026-05-24T12:00:00Z");
+        }
+
+        // Fire two drain calls simultaneously.
+        // With FOR UPDATE SKIP LOCKED, one worker claims all 10 (batch=10)
+        // and the other finds nothing (0).  Either way, total must equal 10.
+        var futureA = CompletableFuture.supplyAsync(() -> {
+            try { return callDrainApi(); } catch (Exception e) { throw new RuntimeException(e); }
+        });
+        var futureB = CompletableFuture.supplyAsync(() -> {
+            try { return callDrainApi(); } catch (Exception e) { throw new RuntimeException(e); }
+        });
+        var a = futureA.get(30, TimeUnit.SECONDS);
+        var b = futureB.get(30, TimeUnit.SECONDS);
+
+        int totalClaimed = a.claimedCount() + b.claimedCount();
+        int totalDeleted = a.deletedCount() + b.deletedCount();
+
+        assertThat(totalClaimed)
+                .as("Total claimed across both workers must equal 10 (no double-claim)")
+                .isEqualTo(10);
+        assertThat(totalDeleted)
+                .as("Total deleted must equal 10 (each record deleted exactly once)")
+                .isEqualTo(10);
+        assertThat(countAllRecords())
+                .as("Table must be empty — all records processed exactly once")
+                .isZero();
+    }
+
+    @Test
+    @Order(15)
+    @DisplayName("Prometheus metrics endpoint exposes JVM and Spring Boot metrics")
+    void prometheusMetricsEndpointExposesExpectedMetrics() {
+        var body = mgmtClient.get()
+                .uri("/actuator/prometheus")
+                .retrieve()
+                .body(String.class);
+
+        assertThat(body)
+                .as("Prometheus endpoint must export JVM memory metrics")
+                .contains("jvm_memory_used_bytes")
+                .as("Prometheus endpoint must export process uptime")
+                .contains("process_uptime_seconds")
+                .as("Prometheus endpoint must export HTTP server metrics")
+                .contains("http_server_requests_seconds");
+    }
+
+    @Test
+    @Order(16)
+    @DisplayName("Pod recovers after restart: drain still returns 200 (restart resilience)")
+    void podRecoveryAfterRestartDrainStillWorks() throws Exception {
+        cleanDeadLetterTable();
+        seedPendingRecord("restart-test_2026-05-24T13:00:00Z");
+
+        // Delete the current pod — the Deployment controller will create a replacement.
+        var pods = k8sClient.pods()
+                .inNamespace("default")
+                .withLabel("app", "dlq-streaming")
+                .list()
+                .getItems();
+        assertThat(pods).as("Pod must exist before restart").isNotEmpty();
+        var podName = pods.getFirst().getMetadata().getName();
+
+        log.info("Deleting pod {} to trigger restart...", podName);
+        k8sClient.pods().inNamespace("default").withName(podName).delete();
+
+        // Wait for the old pod to disappear and a new one to become Ready.
+        await()
+                .atMost(Duration.ofSeconds(120))
+                .pollInterval(Duration.ofSeconds(3))
+                .untilAsserted(() -> {
+                    var current = k8sClient.pods()
+                            .inNamespace("default")
+                            .withLabel("app", "dlq-streaming")
+                            .list()
+                            .getItems();
+                    // Must have a pod with a different name (old one deleted) that is Ready.
+                    assertThat(current)
+                            .as("Replacement pod must exist")
+                            .anyMatch(p -> !podName.equals(p.getMetadata().getName())
+                                    && p.getStatus().getConditions().stream()
+                                            .anyMatch(c -> "Ready".equals(c.getType())
+                                                       && "True".equals(c.getStatus())));
+                });
+
+        log.info("Replacement pod is Ready.");
+
+        // Re-open the port-forward because it targets the old pod by name.
+        closePostgresPortForward();
+        openPostgresPortForward();
+
+        // Drain the pre-seeded record to verify full operational recovery.
+        var response = callDrainApi();
+
+        assertThat(response.claimedCount())
+                .as("After restart, drain must process the pre-seeded record")
+                .isEqualTo(1);
+        assertThat(response.stoppedBecauseReceiverFailed())
+                .as("Receiver must not fail after restart")
+                .isFalse();
+    }
+
+    @Test
+    @Order(17)
+    @DisplayName("CronJob: manual Job trigger calls POST /drain/trigger and completes with exit 0")
+    void cronJobJobCompletesSuccessfully() throws Exception {
+        // Pre-condition: the CronJob must exist (applied during setUpCluster).
+        var cronJob = k8sClient.batch().v1().cronjobs()
+                .inNamespace("default").withName("dlq-drain-trigger").get();
+        assertThat(cronJob)
+                .as("CronJob dlq-drain-trigger must exist in namespace default")
+                .isNotNull();
+
+        // Create a manual Job from the CronJob's jobTemplate.
+        // This mirrors what the Kubernetes scheduler does when the cron schedule fires.
+        String jobName = "dlq-drain-manual-" + System.currentTimeMillis();
+        var job = new JobBuilder()
+                .withNewMetadata()
+                    .withName(jobName)
+                    .withNamespace("default")
+                .endMetadata()
+                .withSpec(cronJob.getSpec().getJobTemplate().getSpec())
+                .build();
+
+        k8sClient.batch().v1().jobs().inNamespace("default").resource(job).create();
+        log.info("Created manual Job '{}' from CronJob dlq-drain-trigger.", jobName);
+
+        // Wait for the Job to succeed. The Job runs curl POST /drain/trigger
+        // and exits 0 on HTTP 200, non-0 on HTTP 4xx/5xx (curl --fail).
+        await()
+                .atMost(Duration.ofSeconds(120))
+                .pollInterval(Duration.ofSeconds(3))
+                .untilAsserted(() -> {
+                    var jobStatus = k8sClient.batch().v1().jobs()
+                            .inNamespace("default").withName(jobName).get().getStatus();
+
+                    assertThat(jobStatus.getSucceeded())
+                            .as("CronJob manual trigger Job '%s' must complete with succeeded=1", jobName)
+                            .isEqualTo(1);
+                });
+
+        log.info("CronJob manual trigger Job '{}' completed successfully.", jobName);
+    }
+
     // ── Helpers ────────────────────────────────────────────────────────────
+
+
+    // ── PostgreSQL port-forward + DB helpers ────────────────────────────────
+
+    /**
+     * Opens a Fabric8 {@link LocalPortForward} from the PostgreSQL pod's port 5432
+     * to a dynamically assigned local port, then creates a HikariCP datasource and
+     * Spring {@link JdbcClient} so operational tests can seed and verify data without
+     * needing a NodePort for PostgreSQL in the test manifests.
+     *
+     * <p>The port-forward is re-used by all operational tests; it is closed in
+     * {@link #tearDownCluster()} and may be re-opened in {@link #podRecoveryAfterRestartDrainStillWorks()}
+     * because the port-forward targets the pod by name — after a pod restart a new
+     * name is assigned and the old forward becomes stale.
+     */
+    static void openPostgresPortForward() {
+        var pgPods = k8sClient.pods()
+                .inNamespace("default")
+                .withLabel("app", "postgres")
+                .list()
+                .getItems();
+        assertThat(pgPods).as("PostgreSQL pod must exist when opening port-forward").isNotEmpty();
+        var pgPodName = pgPods.getFirst().getMetadata().getName();
+
+        pgPortForward = k8sClient.pods()
+                .inNamespace("default")
+                .withName(pgPodName)
+                .portForward(5432);
+
+        var cfg = new HikariConfig();
+        cfg.setJdbcUrl("jdbc:postgresql://127.0.0.1:" + pgPortForward.getLocalPort() + "/dlq");
+        cfg.setUsername("dlq_user");
+        cfg.setPassword("test_password");
+        cfg.setMaximumPoolSize(3);
+        cfg.setConnectionTimeout(10_000);
+        pgDataSource  = new HikariDataSource(cfg);
+        pgJdbcClient  = JdbcClient.create(pgDataSource);
+        log.info("PostgreSQL port-forward open: pod={}, localPort={}", pgPodName, pgPortForward.getLocalPort());
+    }
+
+    /**
+     * Closes the HikariCP pool and the Fabric8 port-forward opened in
+     * {@link #openPostgresPortForward()}.  Safe to call multiple times (idempotent).
+     */
+    static void closePostgresPortForward() {
+        if (pgDataSource != null && !pgDataSource.isClosed()) {
+            pgDataSource.close();
+        }
+        if (pgPortForward != null) {
+            try {
+                pgPortForward.close();
+            } catch (Exception e) {
+                log.warn("Error closing PostgreSQL port-forward: {}", e.getMessage());
+            }
+        }
+    }
+
+    /**
+     * Truncates the {@code dlq.dead_letter_record} table via the port-forwarded
+     * JDBC connection. Used at the start of each operational test to ensure a
+     * clean slate regardless of the previous test's outcome.
+     */
+    private static void cleanDeadLetterTable() {
+        pgJdbcClient.sql("TRUNCATE TABLE dlq.dead_letter_record RESTART IDENTITY").update();
+        log.debug("dead_letter_record table truncated.");
+    }
+
+    /**
+     * Inserts one {@code PENDING} dead-letter record with a minimal JSON payload.
+     * {@code occurred_at} uses the column default ({@code now()}).
+     *
+     * @param processId value for the {@code process_id} column
+     *                  (format: {@code <topic>_<ISO-8601-timestamp>})
+     */
+    private static void seedPendingRecord(String processId) {
+        pgJdbcClient.sql("""
+                INSERT INTO dlq.dead_letter_record(process_id, payload, status)
+                VALUES (:processId, CAST(:payload AS jsonb), 'PENDING')
+                """)
+                .param("processId", processId)
+                .param("payload", "{\"event\":\"test\",\"processId\":\"" + processId + "\"}")
+                .update();
+    }
+
+    /** Returns the total number of rows in {@code dlq.dead_letter_record}. */
+    private static int countAllRecords() {
+        return pgJdbcClient
+                .sql("SELECT COUNT(*) FROM dlq.dead_letter_record")
+                .query(Integer.class)
+                .single();
+    }
+
+    /**
+     * Calls {@code POST /drain/trigger} and returns the parsed {@link DrainApiResponse}.
+     *
+     * @throws Exception if the HTTP call fails or JSON cannot be parsed
+     */
+    private static DrainApiResponse callDrainApi() throws Exception {
+        var json = apiClient.post()
+                .uri("/drain/trigger")
+                .contentType(MediaType.APPLICATION_JSON)
+                .retrieve()
+                .body(String.class);
+        assertThat(json).as("Drain API response body must not be null").isNotNull();
+        return MAPPER.readValue(json, DrainApiResponse.class);
+    }
+
+    // ── Image helpers ───────────────────────────────────────────────────────
 
     /**
      * Saves the app Docker image to a tar file, copies it to the k3s container,
